packages/yew-router-macro/tests/routable_derive/unnamed-fields-fail.stderr
error: only named fields are allowed
 --> $DIR/unnamed-fields-fail.rs:4:8
  |
4 |     One(u32),
  |        ^^^^^
